@@ -1,6 +1,7 @@
 SUBDIRS = \
 	hv \
 	lib/lockdep \
+	objtool \
 	perf \
 	power \
 	usb/usbip
