@@ -548,6 +548,7 @@ install-kbuild: $(STAMPS_DIR)/build-tools
 	dh_testroot
 	dh_prep
 	$(call make-tools,scripts) install DESTDIR=$(DIR) prefix=$(PREFIX_DIR)
+	$(call make-tools,tools/objtool) install DESTDIR=$(DIR) prefix=$(PREFIX_DIR)
 	dh_link $(PREFIX_DIR) /usr/src/$(PACKAGE_NAME)
 	dh_installchangelogs
 	dh_installdocs
