@@ -9,6 +9,7 @@ linux (4.15~rc5-1~exp1) UNRELEASED; urgency=medium
     phram when locked down"
   * cpupower: Move library to multiarch directory
   * [rt] Disable until it is updated for 4.15 or later
+  * linux-kbuild: Add objtool
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 26 Dec 2017 16:25:55 +0000
 
